# eraUQ

./: .gitignore  README.md  pyproject.toml  test_import.py
.github/workflows/: publish-release.yml
Classes/: ERADist.py
Examples/: Example_ERADist.py
legacy_examples/: Example_ERADist.py  Example_ERADist_empirical.py  Example_ERANataf.py  Example_ERANataf_empirical.py  Example_ERARosen_and_ERACond.py  Example_EmpDist.py
legacy_examples/end_to_end_tests/: README.md  conftest.py  generate_reference_data.py  test_empdist_bimodal.py  test_eradir_empirical.py  test_eradir_lognormal.py  test_eranataf_empirical.py  test_eranataf_parametric.py  test_erarosen_eracond.py
legacy_examples/end_to_end_tests/ref/: empdist_ref.json  eradir_empirical_ref.json  eradir_lognormal_ref.json  nataf_empirical_ref.json  nataf_ref.json  rosen_ref.json
notebooks/: ERADist.ipynb  ERADist_empirical.ipynb  ERANataf.ipynb  ERANataf_empirical.ipynb  ERARosen_and_ERACond.ipynb  EmpDist.ipynb  demonstrate_usage_overview.ipynb
src/ERApy/: ERARosen.py  __init__.py
src/Examples/: Example_ERADist.py
src/eraUQ/: ERADist.py  EmpiricalDist.py
src/eraUQ/test/: __init__.py  test_ERADist_DATA.py  test_ERADist_MOM.py  test_ERADist_PAR.py  test_ERADist_integration.py  test_ERADist_special.py
src/eradist/: ERADist.py  ERARosen.py
